# open-design

./: README.md  README.zh-CN.md  pnpm-lock.yaml
.github/scripts/: agent-pr-explore-sandbox.sh
.github/workflows/: actionlint.yml  agent-pr-explore-sandbox.yml  ci.yml  fork-pr-workflow-approval.yml  landing-page-ci.yml  sync-mocks-to-r2.yml  visual-pr-capture.yml  visual-pr-verify.yml
apps/daemon/: package.json  tsconfig.sidecar.json  tsconfig.tests.json
apps/desktop/: bundle.json  package.json
apps/launcher/: AGENTS.md  Cargo.toml
apps/launcher/crates/launcher-lifecycle/: Cargo.toml
apps/launcher/crates/launcher-lifecycle/src/: lib.rs
apps/launcher/crates/launcher-lifecycle/tests/: lifecycle.rs
apps/launcher/crates/launcher-proto/: Cargo.toml
apps/launcher/crates/launcher-proto/src/: lib.rs
apps/launcher/crates/launcher-proto/tests/: proto.rs
apps/launcher/src/: main.rs
apps/web/: bundle.json  package.json
apps/web/src/: App.tsx  (+2 more)
data/: card-events.jsonl  contributor-card-state.json  events.jsonl
docs/i18n/: README.zh-CN.md
e2e/specs/: mac.spec.ts  win.spec.ts
e2e/ui/: app.test.ts  project-management-flows.test.ts  settings-local-cli-codex-fallback.test.ts
mocks/: README.md  manifest.json  mock-agent.mjs
mocks/recordings-staging/: .gitkeep
mocks/scripts/: add-recording.sh  fetch-recordings.sh  smoke-test.sh  upload-to-r2.mjs
scripts/: approve-fork-pr-workflows.test.ts  approve-fork-pr-workflows.ts  batch-design-system-test.ts  guard.ts  seed-test-projects.ts
skills/gsap-frameworks/: SKILL.md
skills/gsap-scrolltrigger/: SKILL.md
(+183 files in other folders)
