[package]
name = "launcher-lifecycle"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
launcher-core = { path = "../launcher-core" }
launcher-platform = { path = "../launcher-platform" }
launcher-proto = { path = "../launcher-proto" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
